# SWEngineer

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .phase_2c_closeout_local.txt  6.7  BUILD_CONTRACT.md  DEV_NOTES.md  README.md  Run-Gates.ps1  _PHASE_fix_install_hooks_root.ps1  _patch_gates_add_validate_ci.py  _tree_full.txt  phase_2c_chain_hardening.py  phase_2c_fix_handoff_validation.py  phase_2c_fix_planner_handoff_validation.py  phase_2c_patch_planner_validate_after_sha.py  phase_2c_patch_planner_validate_after_sha_v2.py  phase_2c_runner_parity.py  phase_2d_build.py  pyproject.toml  requirements-dev.txt  requirements.txt  towershell.ps1
.gates/: LAST_GREEN.txt
app/: __init__.py  main.py  schema_locator.py
contracts/: run_handoff.schema.json
docs/: ANCHOR_TAG.txt  EXTERNAL_RUNNER_SPEC.md  PHASE0B_pytest_tag_v0.2.9-phase5-step5it-publish-interlock_20260130_095545.log.txt  PHASE0_pytest_anchor_baseline.FAIL.txt  build_inventory.md  flow_spine_contract.md  flow_spine_discovery.md  flow_spine_entrypoints_ranked.md  flow_spine_selection.md  phase1h_spine_smoke.md
scripts/: mkstructure.ps1  repo_audit.ps1
src/: swe_bootstrap.py
swe_runner/: flow_spine.py
tests/: conftest.py  test_gui_handoff_runner_parity.py  test_gui_imports.py  test_gui_store.py  test_handoff_schema_negative.py  test_handoff_sha256.py  test_phase2a_schema_resolver_bind.py  test_phase2b_runner_planning_parity_isolation.py  test_phase2c_runner_surface_same_resolver.py  test_phase2d_cli_parity_probe.py  test_phase2e_canonical_sha256.py  test_phase2e_publish_gate_runtime_smoke.py  (+34 more)
(+41 files in other folders)
