[project]
version = "0.0.0"
name = "swengineer"
requires-python = ">=3.12"

[tool.ruff]
exclude = ["vendor"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

